ADD API fetch, localStoraged, display temp, wind, hum, uvi

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
           <div class="card-body">
             <h5 class="card-title">Current City</h5>
             <ul class="list-group list-group-flush">
-              <li class="list-group-item">Temp:</li>
-              <li class="list-group-item">Wind:</li>
-              <li class="list-group-item">Humidity:</li>
-              <li class="list-group-item">UV Index:</li>
+              <li id="currentTemp" class="list-group-item">Temp:</li>
+              <li id="currentWind" class="list-group-item">Wind Speed:</li>
+              <li id="currentHum" class="list-group-item">Humidity:</li>
+              <li id="currentUvi" class="list-group-item">UV Index:</li>
             </ul>
           </div>
         </div>
