--- a/index.html
+++ b/index.html
@@ -29,37 +29,16 @@
                 <button type="button" id="citySearch" class="btn btn-primary">Search</button>
               </th>
             </tr>
-            <tr>
-              <th scope="row">Austin</th>
-            </tr>
-            <tr>
-              <th scope="row">Chicago</th>
-            </tr>
-            <tr>
-              <th scope="row">New York</th>
-            </tr>
-            <tr>
-              <th scope="row">Orlando</th>
-            </tr>
-            <tr>
-              <th scope="row">San Francisco</th>
-            </tr>
-            <tr>
-              <th scope="row">Seattle</th>
-            </tr>
-            <tr>
-              <th scope="row">Denver</th>
-            </tr>
-            <tr>
-              <th scope="row">Atlanta</th>
-            </tr>
+            <div id="searchBtns">
+
+            </div>
           </tbody>
         </table>
       </div>
       <div class="col-8">
         <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Current City</h5>
+          <div id="conditionsBg" class="card-body">
+            <h5 class="card-title" id="currentCity">Current City</h5>
             <ul class="list-group list-group-flush">
               <li id="currentTemp" class="list-group-item">Temp:</li>
               <li id="currentWind" class="list-group-item">Wind Speed:</li>
@@ -68,65 +47,9 @@
             </ul>
           </div>
         </div>
-        <div class="row">
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">☀️</p>
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">☀️</p>
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">☀️</p>
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">☀️</p>
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-2">
-            <div class="card">
-              <div class="card-body">
-                <h5 class="card-title">Date</h5>
-                <p class="card-text">☀️</p>
-                <p class="card-text">Temp:</p>
-                <p class="card-text">Wind:</p>
-                <p class="card-text">Humidity:</p>
-              </div>
-            </div>
-          </div>
+        <div class="row" id="futureForecast">
+         
         </div>
-        </div>
-      </div>
     </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
